# oaken

./: .gitignore  CMakeLists.txt  README.md  roadmap.md  vcpkg.json  walkthrough.md
.github/: copilot-instructions.md
Dev/: CMakeLists.txt  vcpkg.json
Dev/AssetCooker/: CMakeLists.txt
Dev/AssetCooker/Source/: main.cpp
Dev/Engine/: CMakeLists.txt
Dev/Engine/Source/: Engine.cpp  Engine.h
Dev/Engine/Source/Animation/: AnimGraph.cpp  AnimGraph.h
Dev/Engine/Source/Components/: Components.h  Reflection.cpp
Dev/Engine/Source/Core/: HashedString.h
Dev/Engine/Source/Platform/: Input.cpp  Input.h  RenderDevice.cpp  RenderDevice.h  Window.cpp  Window.h
Dev/Engine/Source/Resources/: Animation.cpp  Animation.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Skeleton.cpp  Skeleton.h  Texture.cpp  Texture.h
Dev/Engine/Source/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Dev/Engine/Source/Shaders/: Basic.frag  Basic.frag.dxil  Basic.frag.hlsl  Basic.frag.spv  Basic.vert  Basic.vert.dxil  Basic.vert.hlsl  Basic.vert.spv  BloomBlur.frag  BloomComposite.frag  BrightPass.frag  DepthOnly.frag  DepthOnly.vert  DepthOnly.vert.spv  Fullscreen.vert  Fullscreen.vert.spv  LightCulling.comp  LightCulling.comp.spv  Line.vert  Line.vert.spv  Mesh.frag  Mesh.frag.hlsl  Mesh.frag.spv  Mesh.vert  Mesh.vert.hlsl  Mesh.vert.spv  MeshInstanced.frag  MeshInstanced.frag.spv  MeshInstanced.vert  MeshInstanced.vert.spv  MeshInstancedForwardPlus.frag  MeshInstancedForwardPlus.frag.spv  SSGI.frag  SSGIComposite.frag  SSGIDenoise.frag  SSGITemporal.frag  ShadowMap.frag  ShadowMap.vert  ShadowMapSkinned.vert  ToneMapping.frag  (+1 more)
Dev/Engine/Source/Systems/: AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  CharacterSystem.cpp  CharacterSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h
Dev/Launcher/: CMakeLists.txt
Dev/Launcher/Source/: main.cpp
Dev/Runner/: CMakeLists.txt
Dev/Runner/Source/: main.cpp
Docs/Web/: README.md  index.html  styles.css
Engine/: CMakeLists.txt
Engine/Source/: Engine.cpp  Engine.h
Engine/Source/Components/: Components.h  Reflection.cpp  Reflection.h
Engine/Source/Core/: Context.h  EventBus.h  Log.h  Profiler.h
Engine/Source/Platform/: RenderDevice.cpp  RenderDevice.h
Engine/Source/Shaders/: Basic.frag.dxil  Basic.frag.hlsl  Basic.vert.dxil
Engine/Source/Systems/: AbilitySystem.cpp  AbilitySystem.h  PhysicsSystem.cpp  RenderSystem.cpp  RenderSystem.h  ScriptSystem.h
Game/Sandbox/: CMakeLists.txt
Game/Sandbox/Assets/Models/: Joli.oakanim  Joli.oakskel  Joli_Run.fbx  Joli_Run.oakanim  Joli_Run.oakskel  Joli_Run_self.oakanim  Rumi.fbx  test.fbx  test_anim.fbx
Game/Sandbox/Assets/Scenes/: Test.oakscene
Game/Sandbox/Assets/Shaders/: Mesh.frag.spv  MeshInstancedForwardPlus.frag.spv  ShadowMap.vert.spv  ShadowMapSkinned.vert.spv
Game/Sandbox/Source/: GameComponents.h  GamePlaySystem.cpp  GamePlaySystem.h  main.cpp
Oaken/: Oaken Launcher.lnk
Runner/: CMakeLists.txt
Runner/Source/: main.cpp
Scripts/: CookAndRun.ps1
Source/: Engine.cpp  Engine.h
Source/Components/: Components.h
Source/Core/: Log.cpp  Log.h  TimeStep.h
Source/Platform/: Input.cpp  Input.h  Window.h
Source/Shaders/: Basic.vert.hlsl
Source/Systems/: AbilitySystem.cpp  EditorSystem.cpp  EditorSystem.h  PhysicsSystem.h  RenderSystem.cpp  ScriptSystem.cpp
